# pointfoot-gazebo-ros

./: .gitignore  README.md  README_cn.md  README_en.md
doc/: simulator.mkv
pointfoot_gazebo/: CMakeLists.txt  package.xml
pointfoot_gazebo/launch/: empty_world.launch
pointfoot_gazebo/src/: PointFootHWSim.cpp
pointfoot_sdk_sim/: CMakeLists.txt  package.xml
pointfoot_sdk_sim/include/limxsdk/: apibase.h  datatypes.h  pointfoot_sim.h
pointfoot_sdk_sim/lib/win/: pointfoot_sdk_sim.lib
src/limx_robot_sdk_sim/: CMakeLists.txt  README.md  package.xml
src/limx_robot_sdk_sim/include/limxsdk/: apibase.h  datatypes.h  pointfoot_sim.h
src/limx_robot_sdk_sim/lib/win/: limx_robot_sdk_sim.lib
src/point_foot_robot_description/: CMakeLists.txt  package.xml
src/point_foot_robot_description/launch/: empty_world.launch  reset_pose.launch
src/point_foot_robot_description/meshes/: abad_L_Link.STL  abad_R_Link.STL  base_Link.STL  foot_L_Link.STL  foot_R_Link.STL  hip_L_Link.STL  hip_R_Link.STL  knee_L_Link.STL  knee_R_Link.STL
src/point_foot_robot_description/urdf/: robot.urdf
src/pointfoot_gazebo/: CMakeLists.txt  README.md  package.xml
src/pointfoot_gazebo/config/: default_point_foot.yaml
src/pointfoot_gazebo/include/pointfoot_gazebo/: PointFootHWSim.h
src/pointfoot_gazebo/src/: PointFootHWSim.cpp
