<?xml version="1.0"?>
<package format="2">
  <name>point_foot_robot_description</name>
  <version>0.0.0</version>
  <description>The point_foot_robot_description package</description>
  <maintainer email="limx@limxdynamics.com">limxdynamics</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>

